<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#201F1F">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:showDividers="middle"
        tools:layout_editor_absoluteX="-160dp"
        tools:layout_editor_absoluteY="63dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:background="@drawable/round_edges_layout"
            android:layout_marginStart="7dp"
            android:layout_marginEnd="7dp"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/calendars_chooser"
                android:textColor="@color/colorSettingsText"
                android:layout_gravity="center"
                android:textSize="20sp" />


            <Spinner
                android:id="@+id/calendars_dropdown"
                android:layout_width="140dp"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="30dp"
                android:layout_gravity="center"

                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="30dp"
            android:orientation="horizontal"
            android:layout_marginStart="7dp"
            android:layout_marginEnd="7dp"
            android:background="@drawable/round_edges_layout"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/colors_chooser"
                android:textColor="@color/colorSettingsText"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center"

                android:textSize="20sp" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/calendar_color_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/colorSettingsText"
                    android:checked="true"
                    android:text="@string/use_calendar_color"
                    android:layout_marginEnd="10dp"
                    android:textColor="@color/colorSettingsText" />


                <RadioButton
                    android:id="@+id/default_color_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/colorSettingsText"
                    android:text="@string/use_default_color"
                    android:textColor="@color/colorSettingsText" />
            </RadioGroup>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginStart="7dp"

            android:layout_marginTop="30dp"
            android:layout_marginEnd="7dp"
            android:background="@drawable/round_edges_layout"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"

                android:layout_marginLeft="10dp"
                android:text="@string/auto_update_enabled"
                android:textColor="@color/colorSettingsText"
                android:textSize="20sp" />


            <Switch
                android:id="@+id/auto_update"
                android:layout_width="60dp"
                android:checked="true"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_35sdp"
                android:switchMinWidth="55dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/update_period_costumed"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="30dp"
            android:orientation="horizontal"
            android:layout_marginStart="7dp"
            android:layout_marginEnd="7dp"
            android:background="@drawable/round_edges_layout"

            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/update_period_label"
                android:textColor="@color/colorSettingsText"
                android:layout_gravity="center"
                android:textSize="20sp" />


            <EditText
                android:id="@+id/update_period"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:text="@string/update_period_default"
                android:textColor="@color/colorSettingsText"

                android:layout_gravity="center"

                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="30dp"
            android:orientation="horizontal"
            android:layout_marginStart="7dp"
            android:layout_marginEnd="7dp"
            android:background="@drawable/round_edges_layout"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/widget_background_label"
                android:textColor="@color/colorSettingsText"
                android:layout_gravity="center"
                android:textSize="20sp" />

            <SeekBar
                android:id="@+id/select_widget_background"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:max="5"
                android:text="@string/update_period_label"
                android:textColor="@color/colorSettingsText"
                android:layout_gravity="center"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal"
            android:gravity="center"
            >

        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/save_button"
            android:onClick="onSaveClicked"
            android:textSize="20sp" />

        </LinearLayout>
    </LinearLayout>


</android.support.constraint.ConstraintLayout>